fix search spacing

--- a/web/themes/gavias_colin/css/newheader.css
+++ b/web/themes/gavias_colin/css/newheader.css
@@ -68,7 +68,7 @@ ul.sf-menu.sf-navbar ul ul {
 /* Search */
 .gva-search-region {
     margin-top: -2px !important;
-    right: 0 !important;
+    right: 25px !important;
     text-decoration: none !important;
 }
 
